<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="nyPizzaOrderButton">Order A New York Style Pizza</string>
    <string name="chicagoPizzaOrderButton">Order A Chicago Style Pizza</string>
    <string name="currentOrderButton">View Current Order</string>
    <string name="storeOrdersButton">View Store Orders</string>
    <string name="newyorkPizzaOrderTitle">Ordering A New York Style Pizza</string>
    <string name="chicagoPizzaOrderTitle">Ordering A Chicago Style Pizza</string>
    <string name="currentOrderTitle">Viewing Current: </string>
    <string name="storeOrdersTitle">Viewing Store Orders</string>
    <string name="pizzaSizeSmall">Small</string>
    <string name="pizzaSizeMedium">Medium</string>
    <string name="pizzaSizeLarge">Large</string>
    <string name="crustSelectionTitle">Select Crust Size</string>
    <string name="submitOrder">Add Pizza To Order</string>
    <string-array name="pizzaFlavors">
        <item>Custom</item>
        <item>Deluxe</item>
        <item>BBQ Chicken</item>
        <item>Meatzza</item>
    </string-array>
    <string-array name="toppingsList">
        <item>Sausage</item>
        <item>Pepperoni</item>
        <item>Green Pepper</item>
        <item>Onion</item>
        <item>Mushroom</item>
        <item>BBQ Chicken</item>
        <item>Provolone</item>
        <item>Cheddar</item>
        <item>Beef</item>
        <item>Ham</item>
    </string-array>
    <string name="flavorSelectionTitle">Select Flavor</string>
    <string name="crustTypeTitle">Crust Type:</string>
    <string name="submitOrderAlertTitle">Submitted Order</string>
    <string name="submitOrderAlertMessage">Ordered your pizza!</string>
    <string name="ok">OK</string>
    <string name="maxToppingsAlertTitle">Maximum Toppings</string>
    <string name="maxToppingsAlertMessage">You may not add more than 7 toppings to a pizza! Please remove some toppings.</string>
    <string name="orderFailed">Could not place order!</string>
    <string name="priceTitle">Price</string>
    <string name="subtotalTitle">Subtotal</string>
    <string name="salesTaxTitle">Sales Tax</string>
    <string name="totalTitle">Total</string>
    <string name="placeOrderButton">Place Order</string>
    <string name="removeSelectedPizzaButton">Remove Selected Pizza</string>
    <string name="clearOrderButton">Clear Order</string>
    <string name="selectOrderSpinnerDefault">Select an order to view</string>
    <string name="cancelSelectedOrderButton">Cancel Selected Order</string>
    <string name="cancelSelectedOrderButtonNoOrders">No Orders</string>
    <string name="noPizzasInCurrentOrderWarningMessage">No pizzas in current order</string>
    <string name="noPizzasInCurrentOrderWarningTitle">No Pizzas</string>
    <string name="orderCancelledTitle">Order Canceled</string>
    <string name="orderCancelledMessage">The order was cancelled.</string>



</resources>