<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NYOrderActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/newyorkPizzaOrderTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pizzaImageView"
        android:layout_width="168dp"
        android:layout_height="93dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ny_style_pizza_custom" />

    <RadioGroup
        android:id="@+id/crustSize"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginBottom="2dp"
        android:checkedButton="@id/smallRadioButton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/smallRadioButton"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/pizzaSizeSmall" />

        <RadioButton
            android:id="@+id/mediumRadioButton"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/pizzaSizeMedium" />

        <RadioButton
            android:id="@+id/largeRadioButton"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/pizzaSizeLarge" />
    </RadioGroup>

    <TextView
        android:id="@+id/sizeSelectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/crustSelectionTitle"
        app:layout_constraintBottom_toTopOf="@+id/crustSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="submitOrder"
        android:text="@string/submitOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/flavorSelection"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="2dp"
        android:entries="@array/pizzaFlavors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/pizzaImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/flavorSelectionTitle"
        app:layout_constraintBottom_toTopOf="@+id/flavorSelection"
        app:layout_constraintEnd_toEndOf="@+id/flavorSelection"
        app:layout_constraintStart_toStartOf="@+id/flavorSelection" />

    <TextView
        android:id="@+id/crustTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/crustTypeTitle"
        app:layout_constraintStart_toStartOf="@+id/flavorSelection"
        app:layout_constraintTop_toBottomOf="@+id/flavorSelection" />

    <TextView
        android:id="@+id/editCrustTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/crustTitleTextView"
        app:layout_constraintStart_toEndOf="@+id/crustTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/crustTitleTextView" />

    <ListView
        android:id="@+id/toppingsList"
        android:layout_width="354dp"
        android:layout_height="352dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:entries="@array/toppingsList"
        app:layout_constraintBottom_toTopOf="@+id/sizeSelectionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImageView" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/priceTitle"
        app:layout_constraintStart_toStartOf="@+id/crustTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/crustTitleTextView" />

    <TextView
        android:id="@+id/priceDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/priceTitle"
        app:layout_constraintStart_toEndOf="@+id/priceTitle"
        app:layout_constraintTop_toTopOf="@+id/priceTitle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>